--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
-        os-version: [ubuntu, windows, macOS]
+        os-version: [ ubuntu ]
 
     steps:
       - uses: actions/checkout@v3
@@ -41,7 +41,33 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: true
           verbose: true
-          
+  
+  docs:
+    name: Build docs
+    runs-on: ubuntu-20.04
+    
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Install sphinx
+        run: |
+          pip install sphinx sphinx-autoapi
+      - name: Build docs
+        run: |
+          cd docs && make html
+      - name: Upload to github pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/_build/html
+
   deploy:
     name: Publish to PyPI
     runs-on: ubuntu-20.04
