--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
-        os-version: [ ubuntu ]
+        os-version: [ ubuntu-latest ]
 
     steps:
       - uses: actions/checkout@v3
@@ -44,7 +44,7 @@ jobs:
   
   docs:
     name: Build docs
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v3
@@ -70,7 +70,7 @@ jobs:
 
   deploy:
     name: Publish to PyPI
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     if: startsWith(github.event.ref, 'refs/tags/v')
 
     steps:
