--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,15 @@ jobs:
           pytest --cov-config=.coveragerc --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
+        if: matrix.python-version == '3.9'
         with:
           file: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   
   docs:
     name: Build docs
